namespaces/live.cloud-platform.service.justice.gov.uk/laa-check-client-qualifies-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-check-client-qualifies-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    cloud-platform.justice.gov.uk/namespace: "laa-check-client-qualifies-uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-e2e-meansandmatch"
    cloud-platform.justice.gov.uk/application: "Check if your client qualifies for legal aid"
    cloud-platform.justice.gov.uk/owner: "LAA Means and Match Infra: means-and-match-infra@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-check-client-qualifies"
    cloud-platform.justice.gov.uk/team-name: "check-client-qualifies"
    cloud-platform.justice.gov.uk/review-after: ""
    cloud-platform.justice.gov.uk/runbook: “https://dsdmoj.atlassian.net/wiki/spaces/laagetaccess/pages/4405724996/CCQ+Runbook“
